# SeekFS

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  MANUAL.md  README.md  conanfile.txt
.github/workflows/: build.yml  release.yml
SeekFS/: FileSearcher.cpp  FileSearcher.h  GraphicsUtils.h  HashCalculator.cpp  HashCalculator.h  Spinner.h  main.cpp
SeekFS.xcodeproj/: project.pbxproj
benchmarks/: performance_benchmark.cpp
scripts/: install.sh  install_dependencies.sh  run_examples.sh  seekfs.rb
src/: FileSearcher.h  HashCalculator.cpp  HashCalculator.h  ProgressVisualizer.h  main.cpp
tests/: integration_tests.cpp  unit_tests.cpp
